style1.css
.hidden {
    display: none !important;
}

*{
    margin:0;
    padding:0;
    box-sizing:border-box;
}


body{
    min-height: 100vh;
    font-family:"Poppins",sans-serif;
    display:flex;
    flex-direction:column;
    align-items:center;
    justify-content: center;
    background-color: #0f172a;
    color:white;
    padding:20px;
    overflow-y:auto;
    overflow-x:hidden;
    background:linear-gradient(
        135deg,
        #020617 0%,
        #0f172a 40%,
        #1e293b 100%
    );
}

h1{
    font-size: 3.8rem;
    font-weight: 800;
    font-family: "Poppins",sans-serif;
}

.start-screen{
    width:100%;
    max-width:750px;
    text-align:center;
    padding:60px 50px;
    background:rgba(255,255,255,0.05);
    border-radius:30px;
    box-shadow:
    0 20px 60px rgba(0,0,0,.45);
}

h1{
    font-family: "Bebas Neue",sans-serif;
    font-size:5rem;
    letter-spacing:1px;
    margin-bottom:20px;
}

.p1,.p2{
    font-size:2rem;
    font-weight:700;
    line-height:1.2;
}

.p2{
    color: #ef4444;
    margin-bottom:20px;
}

.p3{
    max-width:520px;
    margin:auto;
    color:#d1d5db;
    font-size:1.1rem;
    line-height:1.8;
    margin-bottom:40px;
}

.buttons{
    display:flex;
    justify-content:center;
    gap:20px;
    flex-wrap:wrap;

}

button{
    cursor:pointer;
    border:none;
    padding:16px 34px;
    font-size:1rem;
    font-weight:600;
    border-radius:50px;
    transition:.3s ease;
}

.start-btn{
    background: #ef4444;
    color:white;
    margin-right:20px;
}

.b2{
    background:transparent;
    color:white;
    border:2px solid white;
}

.start-btn:hover{
    transform:translateY(-4px);
    background: #dc2626;
    box-shadow: 0 10px 30px rgba(239,68,68,.35);
}

.b2:hover{
    transform:translateY(-4px);
    background:white;
    color:#111827;
}

.blob{
    position:fixed;
    width:350px;
    height:350px;
    border-radius:50%;
    filter:blur(100px);
    opacity:.25;
    z-index:-1;
    animation:float 10s ease-in-out infinite;
}

.blob1{
    background: #ef4444;
    top:-100px;
    left:-100px;
}

.blob2{
    background: #7c3aed;
    bottom:-120px;
    right:-120px;
    animation-delay:2s;
}

.blob3{
    background:#2563eb;
    top:40%;
    left:45%;
    width:220px;
    height:220px;
    animation-delay:4s;
}

@keyframes float{
    0%{
        transform:translateY(0px);
    }

    50%{
        transform:translateY(-30px);
    }

    100%{
        transform:translateY(0px);
    }
}

.screen1{
    width:100%;
    max-width:850px;
    background:rgba(255,255,255,.05);
    border-radius:30px;
    backdrop-filter:blur(15px);
    padding:50px;
    text-align:center;
    box-shadow:
    0 20px 60px rgba(0,0,0,.45);
}

.q1{
    font-size:2.7rem;
    font-family:"Poppins",sans-serif;
    font-weight:700;
    margin-bottom:15px;
}

.comment1{
    color: #cbd5e1;
    margin-bottom:35px;
    font-size:1.05rem;
}

.platform-box{
    display:grid;
    grid-template-columns:repeat(2,1fr);
    gap:20px;
}

.platform-box input{
    display:none;
}

.platform-box label{
    background:#1e293b;
    border:2px solid transparent;
    padding:18px;
    border-radius:18px;
    cursor:pointer;
    font-size:1rem;
    font-weight:600;
    transition:.3s;
    display:flex;
    align-items:center;
    gap:15px;
}

.platform-box label:hover{
    transform:translateY(-4px);
    border-color:#ef4444;
    background:#334155;
}

.platform-box input:checked + label{
    border-color: #ef4444;
    background: #dc2626;
    color:white;
}

.next-btn{
    margin-top:35px;
    background:#ef4444;
    color:white;
}

.back-btn{
    background:transparent;
    border:2px solid white;
    color:white;
    margin-left:15px;
}

